--- a/app/src/main/res/menu/menu_actions.xml
+++ b/app/src/main/res/menu/menu_actions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- menu group -->
-    <group android:id="@+id/group_setting">
+    <group android:id="@+id/drop_down">
         <item android:id="@+id/menu_all_down"
             android:title="All Down" />
         <item android:id="@+id/menu_up_down"
