--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -1,3 +1,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <translate android:fromXDelta="-1000" android:toYDelta="0" android:duration="1000"/>
+    <translate
+        android:duration="300"
+        android:fromXDelta="-100"
+        android:toYDelta="0" />
 </set>
