--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,17 +3,46 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bgma2">
 
-    android:background="@drawable/sign_up">
 
+    <RelativeLayout
+        android:id="@+id/rl_view1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp">
+
+        <ImageView
+            android:id="@+id/plus_btn"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@mipmap/ic_plus" />
+
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentEnd="true"
+            android:src="@mipmap/ic_ddrop" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@+id/logout"
+            android:layout_marginTop="2dp"
+            android:background="#cccccc" />
+
+    </RelativeLayout>
 
     <com.loopeer.cardstack.CardStackView
         android:id="@+id/stackview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/rl_view1"
         android:clipToPadding="false"
-        android:layout_marginTop="45dp"
         android:overScrollMode="ifContentScrolls"
-        android:paddingTop="12dp"/>
+        android:paddingTop="8dp" />
 
 </RelativeLayout>
