--- a/app/src/main/res/layout/content_splash_.xml
+++ b/app/src/main/res/layout/content_splash_.xml
@@ -15,6 +15,6 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@mipmap/ic_icon"
+        android:src="@drawable/ic_splash"
         />
 </RelativeLayout>
